id tags for index.html and attempt to debug navbar overlapping issue https://github.com/lmcrean/Hoverboard/issues/18

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,7 +116,7 @@ nav {
 }
 
 .navbar.menuOpen {
-  margin-bottom: 200em;
+  margin-bottom: 0em;
   background-color: white;
 }
 
